Fix some margins on mobile

--- a/src/pages/scss/index.scss
+++ b/src/pages/scss/index.scss
@@ -8,10 +8,9 @@ body {
 }
 
 body.main {
-
 //   // width: 100%;
 //   // height: 100vh;
-  // overflow: hidden !important;
+  overflow: hidden !important;
 //   // margin-top: 80px;
 }
 .main{
@@ -81,13 +80,15 @@ h3 {
 @include mediaSm {
   .main p {
     font-size: 16px;
-    margin-bottom: 100px;
+    padding-top: 100px;
+    margin-bottom: 80px;
   }
   h1 {
-    font-size: 60px;
+    font-size: 50px;
   }
   h2 {
-    font-size: 28px;
+    font-size: 25px;
+    padding-top: 40px;
     padding-top: 20px;
   }
   h3 {
